test/03-ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-private
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx 
  rules:
  - host: "hello.apic.lab"
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port: 
              number: 80
